--- a/react/package.json
+++ b/react/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.8",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
