--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,17 +64,11 @@ jobs:
           command: |
             ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa $EC2_USERNAME@$EC2_IP "
               cd /var/www/vhosts/laravel-react-menu/
-              git pull origin main
+              sudo git pull origin main
               composer install --no-interaction --prefer-dist --optimize-autoloader
               sudo php artisan migrate --force
               sudo php artisan cache:clear
               sudo php artisan config:cache
-              cd /var/www/vhosts/laravel-react-menu/react
-              sudo npm install
-              sudo npm run build
-              sudo rm -rf node_modules
-              sudo systemctl restart php-fpm
-              sudo systemctl restart nginx
             "
 
 workflows:
