Fixing config mysql error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,10 @@ jobs:
   test-php:
     docker:
       - image: cimg/php:8.2-node
-      - image: circleci/mysql:5.7   # Add MySQL service
+      - image: circleci/mysql:5.7
         environment:
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: laravel  # Set the name of your test database
+          MYSQL_DATABASE: laravel
     steps:
       - checkout
       - run:
@@ -40,11 +40,20 @@ jobs:
           command: |
             cp .env.example .env
             php artisan key:generate
-            # Update .env with database connection details
             sed -i 's/DB_HOST=127.0.0.1/DB_HOST=127.0.0.1/' .env
             sed -i 's/DB_DATABASE=laravel/DB_DATABASE=laravel/' .env
             sed -i 's/DB_USERNAME=root/DB_USERNAME=root/' .env
             sed -i 's/DB_PASSWORD=/DB_PASSWORD=root/' .env
+      - run:
+          name: Wait for MySQL to be ready
+          command: |
+            for i in {1..30}; do
+              if mysql -h127.0.0.1 -uroot -proot -e 'SELECT 1'; then
+                exit 0
+              fi
+              sleep 1
+            done
+            exit 1
       - run:
           name: Migrate the database
           command: php artisan migrate
