--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install MySQL Client
+          command: apt-get update && apt-get install -y mysql-client
+      - run:
           name: Install composer dependencies
           command: composer install --no-interaction --prefer-dist --no-scripts --no-progress --no-suggest
       - run:
