--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,9 +28,10 @@ jobs:
   test-php:
     docker:
       - image: cimg/php:8.2-node
-      - image: mysql:8.0
-    services:
-      - mysql
+      - image: circleci/mysql:5.7   # Add MySQL service
+        environment:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: laravel  # Set the name of your test database
     steps:
       - checkout
       - run:
@@ -41,34 +42,14 @@ jobs:
           command: |
             cp .env.example .env
             php artisan key:generate
-            # Set up MySQL environment variables
-            echo "DB_CONNECTION=mysql" >> .env
-            echo "DB_HOST=127.0.0.1" >> .env
-            echo "DB_PORT=3306" >> .env
-            echo "DB_DATABASE=homestead" >> .env
-            echo "DB_USERNAME=root" >> .env
-            echo "DB_PASSWORD=" >> .env
+            # Update .env with database connection details
+            sed -i 's/DB_HOST=127.0.0.1/DB_HOST=127.0.0.1/' .env
+            sed -i 's/DB_DATABASE=laravel/DB_DATABASE=laravel/' .env
+            sed -i 's/DB_USERNAME=root/DB_USERNAME=root/' .env
+            sed -i 's/DB_PASSWORD=/DB_PASSWORD=root/' .env
       - run:
-          name: Wait for MySQL to be ready
-          command: |
-            for i in $(seq 1 30); do
-              if mysqladmin ping -h127.0.0.1 --silent; then
-                break
-              fi
-              echo "Waiting for MySQL..."
-              sleep 1
-            done
-      - run:
-          name: Initialize MySQL Database
-          command: |
-            mysql -e "CREATE DATABASE IF NOT EXISTS homestead;"
-      - restore_cache:
-          keys:
-            - composer-v1-{{ checksum "composer.lock" }}
-      - save_cache:
-          paths:
-            - vendor
-          key: composer-v1-{{ checksum "composer.lock" }}
+          name: Migrate the database
+          command: php artisan migrate
       - run:
           name: Run PHP tests
           command: ./vendor/bin/phpunit
