--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,12 @@ jobs:
   test-php:
     docker:
       - image: cimg/php:8.2-node
-      - image: circleci/mysql:5.7   # Add MySQL service
-        environment:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: laravel  # Set the name of your test database
+    services:
+      - mysql:
+          image: circleci/mysql:5.7
+          environment:
+            MYSQL_ROOT_PASSWORD: root
+            MYSQL_DATABASE: laravel
     steps:
       - checkout
       - run:
@@ -48,11 +50,22 @@ jobs:
             sed -i 's/DB_USERNAME=root/DB_USERNAME=root/' .env
             sed -i 's/DB_PASSWORD=/DB_PASSWORD=root/' .env
       - run:
+          name: Wait for MySQL to be ready
+          command: |
+            for i in $(seq 1 30); do
+              if mysqladmin ping -h127.0.0.1 --silent; then
+                break
+              fi
+              echo "Waiting for MySQL..."
+              sleep 1
+            done
+      - run:
           name: Migrate the database
           command: php artisan migrate
       - run:
           name: Run PHP tests
           command: ./vendor/bin/phpunit
+
 
   deploy:
     # Deploy job to aws ec2 instance
