--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,17 +35,12 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Navigate to React folder
-          command: cd react
-      - run:
           name: Install Cypress dependencies
-          command: npm install
-      - run:
-          name: List node_modules
-          command: ls -la node_modules
+          command: cd react && npm install
       - run:
           name: Run Cypress tests
-          command: npx cypress run
+          command: cd react && npx cypress run
+
 
   test-php:
     docker:
@@ -115,7 +110,7 @@ jobs:
 workflows:
   build-and-test:
     jobs:
-      - build-node
+      # - build-node
       - cypress-test:
           requires:
             - build-node
