--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,11 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install Required Packages
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y lsof # Install lsof
+      - run:
           name: Install Cypress dependencies
           command: cd react && npm install
       - run:
