--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,8 @@ jobs:
       - run:
           name: Install Required Packages
           command: |
-            sudo apt-get update
-            sudo apt-get install -y lsof # Install lsof
+            apt-get update
+            apt-get install -y lsof # Install lsof
       - run:
           name: Install Cypress dependencies
           command: cd react && npm install
