Manually adding the Wait on package

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
           name: Start React development server
           command: |
             cd react
+            npm install --save-dev wait-on
             npm run dev &
       - run:
           name: Wait for React server to start
