--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,24 +31,29 @@ jobs:
 
   cypress-test:
     docker:
-      - image: cypress/base:16  # Use the official Cypress base image
+      - image: cypress/base:16
     steps:
       - checkout
       - run:
           name: Install Required Packages
           command: |
             apt-get update
-            apt-get install -y lsof # Install lsof
+            apt-get install -y lsof
       - run:
-          name: Install Cypress dependencies
-          command: 
-            cd react && npm install --save-dev wait-on cypress --legacy-peer-deps
+          name: Install Cypress Dependencies
+          command: |
+            cd react
+            npm install --save-dev wait-on cypress --legacy-peer-deps
       - run:
           name: Start React Development Server
           command: |
             cd react
-            npm run dev -- --port 3000 &
-            sleep 5
+            PORT=3000 npm run dev > server.log 2>&1 &
+            sleep 10
+      - run:
+          name: Show Server Logs
+          command: |
+            cat react/server.log
       - run:
           name: Verify React Server is Running
           command: |
@@ -58,6 +63,7 @@ jobs:
           command: |
             cd react
             CYPRESS_BASE_URL=http://localhost:3000 npx cypress run
+
 
 
   test-php:
