--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,7 +159,7 @@ workflows:
             - test-php
       - deploy:
           requires:
-            - cypress-test
+            # - cypress-test
             - test-php
           filters:
             branches:
