--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,14 @@ version: 2.1
 orbs:
   node: circleci/node@5
   php: circleci/php@1
+  cypress: cypress-io/cypress@1
   codecov: codecov/codecov@4.0.1
+
+executors:
+  with-chrome:
+    resource_class: small
+    docker:
+      - image: "cypress/browsers:node14.16.0-chrome90-ff88"
 
 jobs:
   codecov-upload:
@@ -37,46 +44,33 @@ jobs:
           destination: node-build
 
   cypress-test:
-    docker:
-      - image: cypress/base:16
+    executor: with-chrome
     steps:
       - checkout
       - run:
-          name: Install Required Packages
-          command: |
-            apt-get update
-            apt-get install -y lsof
-      - run:
-          name: Install Cypress Dependencies
+          name: Install Cypress dependencies
           command: |
             cd react
-            npm install --save-dev wait-on cypress --legacy-peer-deps
+            npm install --legacy-peer-deps
       - run:
-          name: Start React Development Server
+          name: Start React development server
           command: |
             cd react
-            npm run dev > server.log 2>&1 &
-            sleep 10
+            npm run dev &
       - run:
-          name: Show Server Logs
+          name: Wait for React server to start
           command: |
-            cat react/server.log
-      # - run:
-      #     name: Check Listening Ports
-      #     command: |
-      #       lsof -i :5173 || (echo "Port 5173 is not being used" && exit 1)
+            cd react
+            npx wait-on http://localhost:5173
       - run:
-          name: Verify React Server is Running
-          command: |
-            curl -I http://localhost:5173 || (echo "React server is not running" && exit 1)
-      - run:
-          name: Run Cypress Tests
+          name: Run Cypress tests
           command: |
             cd react
             CYPRESS_BASE_URL=http://localhost:5173 npx cypress run
-
-
-
+      - store_test_results:
+          path: react/cypress/results
+      - store_artifacts:
+          path: react/cypress/screenshots
 
   test-php:
     docker:
