Resolving too many arguments error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,9 +95,7 @@ jobs:
       - checkout
       - run:
           name: Install Cypress dependencies
-          command: 
-            cd react
-            npm install
+          command: cd react && npm install
 
   cypress-run:
     executor: with-chrome
@@ -105,9 +103,7 @@ jobs:
       - checkout
       - run:
           name: Run Cypress tests
-          command: 
-            cd react
-            npx cypress run
+          command: cd react && npx cypress run
       - store_test_results:
           path: cypress/results
       - store_artifacts:
