--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,6 +96,9 @@ jobs:
           name: Install Cypress dependencies
           command: cd react && npm install
       - run:
+          name: Run React Server
+          command: cd react && npm run dev --save-dev
+      - run:
           name: Run Cypress tests
           command: cd react && npx cypress run
       - store_test_results:
