--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,10 @@ jobs:
           name: Start React server
           command: |
             cd react
-            npm start & # Start server in the background
+            npm run dev & # Start server in the background
             # Wait for the server to be up and running
             for i in `seq 1 30`; do
-              curl -sSf http://localhost:5173 && echo "Server is up" && exit 0
+              curl -sSf http://localhost:3000 && echo "Server is up" && exit 0
               echo -n .
               sleep 1
             done
