--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,7 +153,7 @@ workflows:
       # - cypress-install:
       #     requires:
       #       - build-node
-      - cypress-run
+      # - cypress-run
           # requires:
           #   - cypress-install
       - test-php:
