--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,8 @@ version: 2.1
 orbs:
   node: circleci/node@5
   php: circleci/php@1
-  codecov: codecov/codecov@4.0.1
   cypress: cypress-io/cypress@1
+  codecov: codecov/codecov@4.0.1
 
 executors:
   with-chrome:
@@ -12,11 +12,11 @@ executors:
       - image: "cypress/browsers:node14.16.0-chrome90-ff88"
 
 jobs:
-  codecov-upload:
-      docker:
-        - image: cimg/base:stable
-      steps:
-        - codecov/upload  # Use the Codecov Orb to upload coverage reports
+  # codecov-upload:
+  #     docker:
+  #       - image: cimg/base:stable
+  #     steps:
+  #       - codecov/upload  # Use the Codecov Orb to upload coverage reports
       
   build-node:
     # Build the Node.js project
@@ -87,6 +87,9 @@ jobs:
       - run:
           name: Run PHP tests
           command: ./vendor/bin/phpunit
+      - codecov/upload:
+          file: coverage.xml
+          token: $CODECOV_TOKEN
 
   # cypress-install:
   #   docker:
